# valve

./: .gitmodules  CMakeLists.txt  config.toml  valve-daemon.service
gpio/src/gpio/: board.cpp
gpio/src/include/gpio/: board.h
protocol/src/include/protocol/: message.h
protocol/src/objects/: message.fbs
protocol/src/protocol/: message_generated.h
src/: CMakeLists.txt
src/include/protocol/: message.h
src/include/valve/: common.h  controller.h  host.h
src/protocol/: CMakeLists.txt  message.cpp
src/valve/: CMakeLists.txt  common.cpp  controller.cpp  host.cpp
src/valvectl/: CMakeLists.txt  main.cpp
src/valved/: CMakeLists.txt  config.cpp  config.h  digital_pin.cpp  digital_pin.h  main.cpp
